# non_counter_app

./: README.md
backend/: base.py  main.py  models.py  prompts.py  pyproject.toml  workers.py
backend/prompts/: data_description_prompt.jinja  gitlab_issue_prompt.jinja  parsing_rules_prompt.jinja  platform_prompt.jinja  translation_prompt.jinja
frontend/: index.html  package.json
frontend/src/: App.vue  api.ts  main.ts
frontend/src/assets/: base.css  main.css
